test/FAIL/breakcmd/autres/02_test_break.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

break add 0x100